styles/search.module.scss
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 50px;
}

.form {
    display: flex;
}

.submitButton {
    background-color: var(--primary);
    width: 20%;
    height: 50px;
    border-radius: 12px;
}

.input {
    border: none;
    height: 50px;
    width: 80%;
    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' fill='white' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
    background-color: var(--lightGrey);
    border-radius: 12px;
    padding: 0.5rem 0.5rem 0.5rem 2.5rem; // top right bottom left
    font-size: 1.5rem;
    transition: box-shadow 0.2s ease-in-out;

    margin-bottom: 30px;
}

.input:focus {
    outline: none;
    box-shadow: 0 0 0 2px var(--primary);
    transition: box-shadow 0.2s ease-in-out;
}

.input::placeholder {
    color: rgb(136, 136, 136);
    opacity: 1;
}

.textAndIcon {
    display: flex;
    align-items: center;
    width: 100%;
    gap: 10px;
}

.items {
    width: 35%;
}

.item {
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 1.5rem;
    height: 50px;
    border-radius: 10px;
    padding: 0 10px;

    justify-content: space-between;
}

.item:hover {
    background-color: var(--lightGrey);
    cursor: pointer;
}

.arrow {
    display: none;
}

.textAndIcon:hover + .arrow {
    display: block;
}

